Fix hidden login button on phone bug -> overflow problem remains

--- a/src/components/Contact_component/Contact_component.css
+++ b/src/components/Contact_component/Contact_component.css
@@ -3,10 +3,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 80px 20px;
+  padding: 70px 20px;
   width: 100%;
-  height: 100%;
-  min-height: 200px;
+  height: calc(100svh - 70px);
   overflow: hidden;
 }
 
@@ -18,6 +17,9 @@
 @media (min-width: 1101px) {
   .textbox {
     padding-left: 30%;
+  }
+  .center-content {
+    height: 100svh;
   }
 }
 
