--- a/src/components/Main_component/Main_component.css
+++ b/src/components/Main_component/Main_component.css
@@ -1,8 +1,10 @@
 .mainphone {
   position: relative;
   width: 100vw;
-  height: 100vh;
+  height: 100svh;
   padding-top: 70px;
+  overflow: auto;
+  background-color: blue;
 }
 
 .mainfullscreen {
